--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -118,7 +118,7 @@
                   <text value="Surname: "/>
                 </properties>
               </component>
-              <component id="bedc4" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+              <component id="bedc4" class="javax.swing.JTextField" binding="firstNameTxt">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -127,7 +127,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="2f286" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+              <component id="2f286" class="javax.swing.JTextField" binding="surnameTxt">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
