--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -17,10 +17,11 @@
               <card name="Card1"/>
             </constraints>
             <properties>
-              <foreground color="-1841953"/>
+              <background color="-3290691"/>
+              <foreground color="-3290691"/>
               <preferredSize width="800" height="480"/>
             </properties>
-            <border type="none"/>
+            <border type="etched"/>
             <children>
               <grid id="7119d" binding="background" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
@@ -29,9 +30,12 @@
                   <gridbag weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
-                  <background color="-1841953"/>
+                  <background color="-2038820"/>
+                  <preferredSize width="350" height="200"/>
                 </properties>
-                <border type="none"/>
+                <border type="etched">
+                  <color color="-13947600"/>
+                </border>
                 <children>
                   <component id="807de" class="javax.swing.JLabel">
                     <constraints>
@@ -69,23 +73,24 @@
                       <text value="Password: "/>
                     </properties>
                   </component>
-                  <component id="3fc8e" class="javax.swing.JButton" binding="loginButton" default-binding="true">
+                  <component id="3fc8e" class="javax.swing.JButton" binding="loginBtn">
                     <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <background color="-11503214"/>
+                      <background color="-7751195"/>
                       <text value="Login"/>
                     </properties>
                   </component>
                 </children>
               </grid>
-              <component id="5a686" class="javax.swing.JButton" binding="createAccountButton" default-binding="true">
+              <component id="5a686" class="javax.swing.JButton" binding="createAccountBtn">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
                   <gridbag top="50" left="0" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
+                  <background color="-7751195"/>
                   <text value="Create Account"/>
                 </properties>
               </component>
@@ -96,7 +101,7 @@
               <card name="Card2"/>
             </constraints>
             <properties>
-              <background color="-1841953"/>
+              <background color="-3290691"/>
             </properties>
             <border type="none"/>
             <children>
@@ -136,13 +141,13 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="c3f71" class="javax.swing.JButton" binding="createAccountBtn">
+              <component id="c3f71" class="javax.swing.JButton" binding="createBtn">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                   <gridbag weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
-                  <text value="Create Account"/>
+                  <text value="Create"/>
                 </properties>
               </component>
               <component id="783fe" class="javax.swing.JButton" binding="chooseAvatarBtn">
@@ -188,7 +193,9 @@
       <grid id="7b953" binding="controlPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="North"/>
-        <properties/>
+        <properties>
+          <background color="-3290691"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="6d4ec" class="javax.swing.JButton" binding="settingsButton" default-binding="true">
@@ -198,6 +205,7 @@
               </grid>
             </constraints>
             <properties>
+              <background color="-7751195"/>
               <enabled value="false"/>
               <text value="Settings"/>
             </properties>
@@ -207,6 +215,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="70" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-7751195"/>
               <enabled value="false"/>
               <text value="BG music"/>
             </properties>
@@ -215,7 +224,9 @@
       </grid>
       <grid id="c6e32" binding="nextPanel" layout-manager="GridBagLayout">
         <constraints border-constraint="South"/>
-        <properties/>
+        <properties>
+          <background color="-3290691"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="fc114" class="javax.swing.JButton" binding="nextButton" default-binding="true">
@@ -224,6 +235,7 @@
               <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
+              <background color="-7751195"/>
               <enabled value="false"/>
               <text value="Next"/>
             </properties>
