--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -313,7 +313,7 @@
               </component>
             </children>
           </grid>
-          <grid id="3b0e3" binding="rulesScreen" layout-manager="BorderLayout" hgap="0" vgap="0">
+          <grid id="3b0e3" binding="rulesScreen" layout-manager="GridBagLayout">
             <constraints>
               <card name="Card3"/>
             </constraints>
@@ -323,24 +323,22 @@
             </properties>
             <border type="none"/>
             <children>
-              <grid id="5016d" binding="rulesPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
-                <constraints border-constraint="Center"/>
+              <component id="499b9" class="javax.swing.JTextPane" binding="RULESYouWillHaveTextPane" default-binding="true">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="50"/>
+                  </grid>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
                 <properties>
-                  <preferredSize width="250" height="150"/>
-                </properties>
-                <border type="none"/>
-                <children/>
-              </grid>
-              <component id="783fe" class="javax.swing.JButton" binding="chooseAvatarBtn">
-                <constraints border-constraint="Center"/>
-                <properties>
-                  <text value="Choose Avatar"/>
+                  <editable value="false"/>
+                  <preferredSize width="400" height="250"/>
+                  <text value="                     &#9;                                    RULES&#10;&#10;- You will have one shot at each question&#10;- There is a timer but you can take as much time as needed&#10;- In upper right you can change settings for font and light/dark mode &#10;- There is a soothing jingle you can turn on/off"/>
                 </properties>
               </component>
             </children>
           </grid>
-          <grid id="27a9c" binding="questionsScreen" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <grid id="27a9c" binding="questionsScreen" layout-manager="GridBagLayout">
             <constraints>
               <card name="Card4"/>
             </constraints>
@@ -350,43 +348,82 @@
             <border type="none"/>
             <children/>
           </grid>
-          <grid id="41503" binding="resultsScreen" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-            <margin top="0" left="0" bottom="0" right="0"/>
+          <grid id="41503" binding="resultsScreen" layout-manager="GridBagLayout">
             <constraints>
               <card name="Card5"/>
             </constraints>
             <properties>
               <name value="results"/>
+              <preferredSize width="800" height="480"/>
             </properties>
             <border type="none"/>
             <children/>
           </grid>
         </children>
       </grid>
-      <grid id="7b953" binding="controlPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="2">
+      <grid id="7b953" binding="controlPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints border-constraint="North"/>
         <properties>
           <background color="-3290691"/>
         </properties>
         <border type="none"/>
         <children>
-          <component id="6d4ec" class="javax.swing.JButton" binding="settingsButton" default-binding="true">
-            <constraints/>
+          <grid id="77a39" binding="settingsPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+            <constraints border-constraint="East"/>
             <properties>
-              <background color="-7751195"/>
-              <enabled value="false"/>
-              <text value="Settings"/>
+              <background color="-1041"/>
             </properties>
-          </component>
-          <component id="cfcb" class="javax.swing.JButton" binding="BGMusicButton" default-binding="true">
-            <constraints/>
+            <border type="none"/>
+            <children>
+              <component id="cfcb" class="javax.swing.JButton" binding="BGMusicButton" default-binding="true">
+                <constraints/>
+                <properties>
+                  <background color="-7751195"/>
+                  <enabled value="false"/>
+                  <horizontalAlignment value="0"/>
+                  <preferredSize width="100" height="34"/>
+                  <text value="BG music"/>
+                </properties>
+              </component>
+              <component id="6d4ec" class="javax.swing.JButton" binding="settingsButton" default-binding="true">
+                <constraints/>
+                <properties>
+                  <background color="-7751195"/>
+                  <enabled value="false"/>
+                  <preferredSize width="100" height="34"/>
+                  <text value="Settings"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="3cfa" binding="profilePanel" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints border-constraint="West"/>
             <properties>
-              <background color="-7751195"/>
-              <enabled value="false"/>
-              <horizontalAlignment value="0"/>
-              <text value="BG music"/>
+              <background color="-1041"/>
+              <preferredSize width="200" height="0"/>
             </properties>
-          </component>
+            <border type="none"/>
+            <children/>
+          </grid>
+          <grid id="3e3f9" binding="topPanel" layout-manager="GridBagLayout">
+            <constraints border-constraint="Center"/>
+            <properties>
+              <background color="-3290691"/>
+              <preferredSize width="300" height="0"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="8dc36" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Timer Placeholder"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
         </children>
       </grid>
       <grid id="c6e32" binding="nextPanel" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
