--- a/src/SmartHire.form
+++ b/src/SmartHire.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="SmartHire">
   <grid id="27dc6" binding="SmartHireHub" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="963" height="400"/>
+      <xy x="20" y="20" width="963" height="574"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -169,7 +169,7 @@
                     </constraints>
                     <properties>
                       <icon value="avatars/avatar1.png"/>
-                      <selected value="true"/>
+                      <selected value="false"/>
                       <text value="Avatar1"/>
                     </properties>
                   </component>
@@ -333,7 +333,7 @@
                 </constraints>
                 <properties>
                   <editable value="false"/>
-                  <preferredSize width="400" height="250"/>
+                  <preferredSize width="600" height="275"/>
                   <text value="                     &#9;                                    RULES&#10;&#10;SmartHire IQ Quiz App is a digital assessment tool that will test candidates intelligence and cognitive abilities through a series of carefully designed questions.&#10;&#10;The test will check candidates skills like  problem-solving, logical reasoning, critical-thinking and pattern recognition.&#10;&#10;- The questions have only one correct answer.&#10;- Each question will display the skill being tested and have a certain difficulty level displayed at the beginning of the question.&#10;- The test has a timer that records how long it took the candidate to complete the test.&#10;- In upper right you can change settings for font and light/dark mode &#10;- There is a soothing jingle you can turn on/off"/>
                 </properties>
               </component>
@@ -347,7 +347,62 @@
               <name value="questions"/>
             </properties>
             <border type="none"/>
-            <children/>
+            <children>
+              <component id="b1b0f" class="javax.swing.JLabel" binding="aLbl">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Label"/>
+                </properties>
+              </component>
+              <component id="e107c" class="javax.swing.JLabel" binding="bLbl">
+                <constraints>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Label"/>
+                </properties>
+              </component>
+              <component id="cc8d7" class="javax.swing.JLabel" binding="cLbl">
+                <constraints>
+                  <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Label"/>
+                </properties>
+              </component>
+              <component id="21644" class="javax.swing.JLabel" binding="dLbl">
+                <constraints>
+                  <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Label"/>
+                </properties>
+              </component>
+              <component id="7436b" class="javax.swing.JLabel" binding="questionLbl">
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Label"/>
+                </properties>
+              </component>
+              <component id="7a38b" class="javax.swing.JLabel" binding="photoLbl">
+                <constraints>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Label"/>
+                </properties>
+              </component>
+            </children>
           </grid>
           <grid id="41503" binding="resultsScreen" layout-manager="GridBagLayout">
             <constraints>
@@ -404,7 +459,14 @@
               <preferredSize width="200" height="0"/>
             </properties>
             <border type="none"/>
-            <children/>
+            <children>
+              <grid id="fc3a0" layout-manager="BorderLayout" hgap="0" vgap="0">
+                <constraints border-constraint="West"/>
+                <properties/>
+                <border type="none"/>
+                <children/>
+              </grid>
+            </children>
           </grid>
           <grid id="3e3f9" binding="topPanel" layout-manager="GridBagLayout">
             <constraints border-constraint="Center"/>
@@ -438,7 +500,7 @@
             <constraints/>
             <properties>
               <background color="-7751195"/>
-              <enabled value="false"/>
+              <enabled value="true"/>
               <text value="Next"/>
             </properties>
           </component>
